force-app/main/default/objects/Transaction_Expense__c/Transaction_Expense__c.object-meta.xml
<CustomObject>
    <label>Transaction Expense</label>
    <nameField>
        <displayFormat>TE-{0000}</displayFormat>
        <label>Transaction Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>