force-app/main/default/objects/Transaction_Expense__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Transaction Expenses</relationshipLabel>
    <relationshipName>Transaction_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>